EM-5080 enable fortify